# finAnalist

./: README.md  company_analysis.py  config.ini  create-all.py  create-minimal.py  create.py  data_collection.py  financial_analysis.py  ini.ipynb  main.py  news_analysis.py  pyproject.toml  report_generation.py  requirements.txt  sample.md  simulation.py  test.ipynb  todo
config/: config.ini
data/company_analysis/: results.csv
data/financial_analysis/: results.csv
data/simulations/: results.csv
lib/: company_analysis.py  data_collection.py  financial_analysis.py  news_analysis.py  report_generation.py  simulation.py
reports/: investment_report.md
templates/: graph_template.html  report_template.md
tests/: test_company_analysis.py  test_data_collection.py  test_financial_analysis.py  test_news_analysis.py  test_report_generation.py  test_simulation.py
