
[tool.poetry]
name = "investment-theme-analysis"
version = "0.1.0"
description = "A tool for analyzing investment themes and providing investment suggestions"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.2"
sqlalchemy = "^1.4.15"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
transformers = "^4.6.1"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
python-dotenv = "^0.17.1"
openai = "^0.2.6"
tweepy = "^4.0.0"
fredapi = "^0.5.0"
finnhub-python = "^2.4.9"
polygon-api-client = "^0.2.9"
yfinance = "^0.1.63"
simfin = "^0.3.0"
discord.py = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
